# aqua

./: .gitignore  DESIGN.md  README.md  TODO.md  pyproject.toml
docs/: _config.yml  blog.md  index.md
docs/_includes/: sidebar.html
docs/_layouts/: default.html
docs/_posts/: 2025-12-02-introducing-aqua.md  2025-12-03-agent-roles.md  2025-12-04-serialize-long-running-projects.md
src/aqua/: __init__.py  __main__.py  cli.py  coordinator.py  db.py  models.py  utils.py
src/aqua/templates/: AGENT_INSTRUCTIONS.md
tests/: __init__.py  conftest.py  test_coordinator.py  test_db.py  test_leader.py
