[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aqua-coord"
version = "0.2.9"
description = "Autonomous QUorum of Agents - Lightweight coordinator for CLI AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Vignesh", email = "mailvgnsh@gmail.com" }
]
keywords = [
    "ai",
    "agents",
    "coordination",
    "cli",
    "claude",
    "codex",
    "gemini",
    "multi-agent",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.0",
]

[project.scripts]
aqua = "aqua.cli:main"

[project.urls]
Homepage = "https://github.com/vignesh07/aqua"
Repository = "https://github.com/vignesh07/aqua"
Issues = "https://github.com/vignesh07/aqua/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/aqua"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
